# omron-syncd

./: .gitignore  README.md  pyproject.toml
omron_syncd/: __init__.py  __main__.py  config.py  daemon.py  scanner.py  sync_worker.py
omron_syncd/google_sync/: __init__.py  client.py  config.py  state.py  syncer.py
systemd/: omron-syncd.service
