[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omron-syncd"
version = "0.1.0"
description = "Auto-sync daemon for Omron BP monitors via the omblepy fork"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "tom-ton" }]
dependencies = [
    # We use BleakScanner with detection_callback, scanning_mode="active",
    # adapter=..., and AdvertisementData.{manufacturer_data,rssi}. All of
    # these are stable since bleak 0.20. Cap below the next major in case
    # of future API breaks.
    "bleak>=0.20,<1.0",
    # Optional Google Sheets integration. We use a small, stable subset:
    # service_account.Credentials.from_service_account_file (google-auth)
    # and discovery.build(...).spreadsheets().values().append (google-api-
    # python-client). Cap below the next major to guard against breaking
    # API changes (Google have shipped major bumps before).
    "google-api-python-client>=2.0.0,<3.0.0",
    "google-auth>=2.0.0,<3.0.0",
]

[project.scripts]
omron-syncd = "omron_syncd.daemon:main"

[tool.setuptools.packages.find]
include = ["omron_syncd*"]
